Add battery, ground and opamp

--- a/current-divider.tex
+++ b/current-divider.tex
@@ -10,6 +10,6 @@
         to[short]                                 (1, 0)
         to[R, i_<=$I_L$, l_=$R_L$]                (1, 1.5)
         to[short]                                 (0, 1.5)
-        to[current source, i<^=$I_{in}$, invert]  (0, 0);
+        to[current source, i<^=$I_{IN}$, invert]  (0, 0);
 \end{tikzpicture}
 \end{document}
